assets/css/employers.css
/* ... */
@media screen and (max-width: 1024px) and (min-height: 1080px) {
  .side-text {
    margin-top: -20%;
  }

  .side-text p {
    font-size: 6rem;
  }

  .side-text h1 {
    margin: 0px 0px 0.5em;
  }

  .gradient-btn {
    font-size: 2rem;
  }

  .map-heading-mobile h2 {
    margin: 0px;
    font-size: 5rem;
  }

  .map-heading-mobile .heading-blue {
    color: #5bd;
    font-size: 3.5rem;
    letter-spacing: 1.25rem;
  }
}

@media screen and (max-width: 975px) {
  .map-pin {
    transform: translate(25%, -40%);
  }

  .side-text {
    margin-top: -20%;
  }
}

@media screen and (max-width: 1024px) and (max-height: 959px) {
  .side-text {
    margin-top: -40%;
  }
}

@media screen and (max-width: 510px) {
  .city-column {
    position: relative;
    width: 50%;
    min-width: 50%;
    left: 50%;
    transform: rotateY(-90deg);
  }

  .city-column:nth-child(1).visible,
  .city-column:nth-child(2).visible {
    animation: rotate-in-block 12s linear 0s infinite;
  }

  .city-column:nth-child(3).visible,
  .city-column:nth-child(4).visible {
    transform: rotateY(-90deg);
    left: -50%;
    animation: rotate-in-block 12s linear 6s infinite;
  }

  .landing-section .container {
    padding: 0px;
  }

  .main-image {
    width: 100%;
  }

  .mobile-hidden {
    display: inline-block;
  }

  .mobile-newline {
    display: block;
  }

  .map-window {
    border-radius: 25px;
  }

  .map-pin {
    height: 2rem;
    width: calc(2rem * 0.632);
    transform: translate(0px, -25%);
  }

  .main-view {
    margin-top: 15vh;
  }

  .side-text {
    margin-top: 0px;
  }
}

@media screen and (max-width: 510px) and (min-height: 800px) {
  .side-text {
    margin-top: 10%;
  }
}

@media screen and (min-height: 680px) {
  .section-footer-heading {
    margin-bottom: 1.5rem;
  }
}

@media screen and (max-width: 510px) and (max-height: 680px) {
  .side-text h1 {
    margin-bottom: 1.15rem;
  }
}

@media screen and (max-width: 510px) and (max-height: 640px) {
  .side-text p {
    font-size: 3.5rem;
  }

  .nyc.visible {
    right: 8%;
    top: 27%;
  }

  .sanfran.visible {
    left: 0.75%;
    top: 34%;
  }

  .dallas.visible {
    left: 49%;
    top: 71%;
  }

  .la.visible {
    left: 5.5%;
    top: 52%;
  }

  .orlando.visible {
    right: 16.25%;
    top: 77.25%;
  }

  .sandiego.visible {
    left: 8%;
    top: 58%;
  }

  .seattle.visible {
    left: 8%;
    top: -2%;
  }

  .washington.visible {
    right: 12.5%;
    top: 34%;
  }

  .denver.visible {
    left: 30%;
    top: 45%;
  }

  .minneapolis.visible {
    right: 43%;
    top: 18%;
  }
}

@media screen and (max-width: 370px) {
  .section-footer-heading {
    font-size: 0.8rem;
  }
}

@keyframes rotate-in-block {
  0% {
    transform: rotateY(-90deg);
  }

  10% {
    transform: rotateY(0deg);
  }

  40% {
    transform: rotateY(0deg);
  }

  50% {
    transform: rotateY(-90deg);
  }

  100% {
    transform: rotateY(-90deg);
  }
}

